--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
             <h2>HERE ARE SOME DETAILS ABOUT UPCOMING CONTESTS</h2>
         </div>
         <div class="contest-container">
+            <div class="heading">
+                <div class="contest-name">
+                    <h3>Name</h3>
+                </div>
+                <div class="contest-Date">
+                    <h3>Date</h3>
+                </div>
+                <div class="contest-starttime">
+                    <h3>Start Time</h3>
+                </div>
+                <div class="contest-endtime">
+                    <h3>End Time</h3>
+                </div>
+            </div>
             <!-- data is added here after fetched from the api -->
         </div>
     </div>
