--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="./index.css" rel="stylesheet">
+    <link href="/index.css" rel="stylesheet">
 </head>
 <body>
     <div class="header">HEADER</div>
@@ -39,5 +39,5 @@
         </div>
     </div>
 </body>
-  <script src="./index.js"></script>
+  <script src="/index.js"></script>
 </html>
